@startuml Class Diagram Sprite

title general class diagram (II)

class Level {
    
}

class Sprite {
    
}

abstract class Berry {
    
}

class CoinBerry {
    
}

class EnergyBerry {
    
}

class HealthBerry {
    
}

class RageBerry {
    
}

abstract class Projectile {
    
}

class Spore {
    
}

class Acorn{
    
}

abstract class ProjectilesPool {
    
}

class AcornPool {
    
}

class SporePool {
    
}

abstract class Character {
    
}

class Player {
    
}

abstract class Enemy {
    
}

abstract class MovingEnemy {
    
}

class Hedgehog {
    
}

class Fox {
    
}

class Bat {
    
}

class Bear {
    
}

abstract class Shooter {
    
}

class Squirrel {
    
}

class Mushroom {
    
}

enum MushroomDirection {
    
}

enum MushroomState {
    
}

Level --> Sprite

Sprite <|-- Berry
Sprite <|-- Character
Sprite <|-- Projectile

Berry <|-- CoinBerry
Berry <|-- EnergyBerry
Berry <|-- HealthBerry
Berry <|-- RageBerry


ProjectilesPool <|-- SporePool
ProjectilesPool <|-- AcornPool


Projectile <|-- Spore
Projectile <|-- Acorn

SporePool o-- Spore
AcornPool o-- Acorn

Character <|-- Player
Character <|-- Enemy

Enemy <|-- MovingEnemy
Enemy <|-- Shooter
Enemy --> ResourceManager

MovingEnemy <|-- Hedgehog
MovingEnemy <|-- Fox
MovingEnemy <|-- Bat
MovingEnemy <|-- Bear

Shooter <|-- Squirrel
Shooter <|-- Mushroom
Shooter --> ProjectilesPool
Squirrel --> AcornPool
Mushroom --> MushroomDirection
Mushroom --> MushroomState
Mushroom --> SporePool

@enduml